fixing page footer issues... spacing, margins, icon sizes

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -323,12 +323,12 @@ a:focus {
 #map {
     width: 100%;
     height: 200px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 100px;
     }
 
     .download-section {
@@ -337,7 +337,7 @@ a:focus {
 
     #map {
         height: 400px;
-        margin-top: 250px;
+        margin-top: 100px;
     }
 }
 
@@ -410,23 +410,34 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
+/**    
+NEW STUFF FROM JEKYLL TEST SITE
+*/
+
+/** Icons */
+.icon > svg { display: inline-block; width: 16px; height: 16px; vertical-align: middle; }
+.icon > svg path { fill: #828282; }
+
+/** Wrapper */
+.wrapper { max-width: -webkit-calc(776px - (30px * 2)); max-width: calc(776px - (30px * 2)); margin-right: auto; margin-left: auto; padding-right: 30px; padding-left: 30px; }
+@media screen and (max-width: 776px) { .wrapper { max-width: -webkit-calc(776px - (30px)); max-width: calc(776px - (30px)); padding-right: 15px; padding-left: 15px; } }
+
+/** Clearfix */
+.wrapper:after, .footer-col-wrapper:after { content: ""; display: table; clear: both; }
+
 /** Site footer */
 .site-footer { border-top: 1px solid #e8e8e8; padding: 30px 0; }
-
 .footer-heading { font-size: 18px; margin-bottom: 15px; }
-
-.contact-list, .social-media-list { list-style: none; margin-left: 0; }
-
+.footer-site-description { font-size: 14px; margin-left: 15px; }
+.contact-list, .social-media-list { list-style: none; margin-left: 0; padding-left: 0px; }
 .footer-col-wrapper { font-size: 15px; color: #828282; margin-left: -15px; }
-
 .footer-col { float: left; margin-bottom: 15px; padding-left: 15px; }
-
 .footer-col-1 { width: -webkit-calc(35% - (30px / 2)); width: calc(35% - (30px / 2)); }
-
 .footer-col-2 { width: -webkit-calc(20% - (30px / 2)); width: calc(20% - (30px / 2)); }
-
 .footer-col-3 { width: -webkit-calc(45% - (30px / 2)); width: calc(45% - (30px / 2)); }
 
-@media screen and (max-width: 800px) { .footer-col-1, .footer-col-2 { width: -webkit-calc(50% - (30px / 2)); width: calc(50% - (30px / 2)); }
+@media screen and (max-width: 776px) { .footer-col-1, .footer-col-2 { width: -webkit-calc(50% - (30px / 2)); width: calc(50% - (30px / 2)); }
   .footer-col-3 { width: -webkit-calc(100% - (30px / 2)); width: calc(100% - (30px / 2)); } }
 @media screen and (max-width: 600px) { .footer-col { float: none; width: -webkit-calc(100% - (30px / 2)); width: calc(100% - (30px / 2)); } }
+
+
